feat: create get popupinfos req
